--- a/client/style.css
+++ b/client/style.css
@@ -4,6 +4,7 @@ body {
 }
 
 .container {
+  position: relative;
   margin: 40px auto;
   padding: 50px;
   background-color: #fff;
@@ -59,7 +60,69 @@ body {
   border-color: #1a73e8;
   box-shadow: 0 0 0 3px rgba(26, 115, 232, 0.3);
 }
+#toast-container {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  z-index: 9999;
+}
+#loading-container{
+  background-color: #fff;
+  width:100%;
+  height:100%;
+  display:none;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #e0e0e0;
+  border-radius: 10px;
+  z-index:50;
+  position: absolute;
+  top:0;
+  left:0;
+}
+.loader {
+  border: 16px solid #f3f3f3; /* Light grey */
+  border-top: 16px solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 1s linear infinite;
+}
 
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+.toast {
+  color: #fff;
+  padding: 15px 20px;
+  margin-top: 10px;
+  border-radius: 5px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  opacity: 0;
+  transform: translateX(100%);
+  transition: transform 0.5s ease, opacity 0.5s ease;
+}
+
+.toast.show {
+  opacity: 1;
+  transform: translateX(0);
+}
+
+.toast.default {
+  background-color: #1a73e8;
+}
+
+.toast.success {
+  background-color: #4caf50;
+}
+
+.toast.error {
+  background-color: #f44336;
+}
 .floating-label {
   position: absolute;
   top: 10px;
